# OpenGov-EarlyMathematics

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_results.txt  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docker/: Dockerfile  compose.yml
src/opengov_earlymathematics/: __init__.py  cli.py  config.py  main.py
src/opengov_earlymathematics/agents/: data_client.py  math_agent.py  ollama_client.py
src/opengov_earlymathematics/ai/: tutor.py
src/opengov_earlymathematics/api/: main.py  routes.py
src/opengov_earlymathematics/core/: curriculum.py  learning_path.py  models.py  problem_engine.py
src/opengov_earlymathematics/ml/: student_model.py
src/opengov_earlymathematics/tui/: app.py
src/opengov_earlymathematics/ui/: app.py
src/opengov_earlymathematics/utils/: logger.py
tests/integration/: test_api_endpoints.py  test_curriculum_integration.py  test_end_to_end.py
tests/unit/: test_cli.py  test_cli_errors.py  test_config.py  test_config_more.py  test_curriculum.py  test_learning_path.py  test_learning_path_more.py  test_logger.py  test_logger_more.py  test_models.py  test_problem_engine.py  test_problem_engine_more.py  test_tutor.py  test_tutor_more.py
